[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/fondos.png" type="Texture" id=1]
[ext_resource path="res://source/ui components/title.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/ui components/menuofmusic.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/ui components/musicmenu.gd" type="Script" id=4]
[ext_resource path="res://audio/mymusic/fondo.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/mymusic/bulletplayer3.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/mymusic/ataque2.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/mymusic/ataque.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/mymusic/bulletplayer2.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/mymusic/bulletenemy.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/mymusic/bulletenemy3.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/mymusic/bulletplayer4.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/mymusic/fondo3.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/mymusic/ataque3.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/mymusic/bulletenemy2.wav" type="AudioStream" id=15]
[ext_resource path="res://audio/mymusic/fondo2.ogg" type="AudioStream" id=16]
[ext_resource path="res://source/ui components/play.tscn" type="PackedScene" id=17]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fondos" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 424.0
texture = ExtResource( 1 )

[node name="Label" parent="." instance=ExtResource( 2 )]
margin_left = -49.6122
margin_top = -140.979
margin_right = 53.3878
margin_bottom = -111.979
text = "MUSIC "

[node name="menu" parent="." instance=ExtResource( 3 )]
margin_left = 147.244
margin_top = 243.744
margin_right = 219.244
margin_bottom = 401.744

[node name="menu2" parent="." instance=ExtResource( 3 )]
margin_left = 303.927
margin_top = 239.744
margin_right = 375.927
margin_bottom = 397.744

[node name="menu3" parent="." instance=ExtResource( 3 )]
margin_left = 462.388
margin_top = 239.744
margin_right = 534.388
margin_bottom = 397.744

[node name="menu4" parent="." instance=ExtResource( 3 )]
margin_left = 621.069
margin_top = 247.744
margin_right = 693.069
margin_bottom = 405.744

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="attack1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="attack2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="attack3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="damage1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="damage2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="damage3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="enemyattack1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="enemyattack2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="enemyattack3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="play" parent="." instance=ExtResource( 17 )]
margin_left = 394.927
margin_top = 505.108
margin_right = 588.927
margin_bottom = 525.108
next_scene = "res://source/nivel.tscn"
[connection signal="accepted" from="menu" to="." method="_on_menu_accepted"]
[connection signal="is_pressed" from="menu" to="." method="_on_menu_is_pressed"]
[connection signal="accepted" from="menu2" to="." method="_on_menu2_accepted"]
[connection signal="is_pressed" from="menu2" to="." method="_on_menu2_is_pressed"]
[connection signal="accepted" from="menu3" to="." method="_on_menu3_accepted"]
[connection signal="is_pressed" from="menu3" to="." method="_on_menu3_is_pressed"]
[connection signal="accepted" from="menu4" to="." method="_on_menu4_accepted"]
[connection signal="is_pressed" from="menu4" to="." method="_on_menu4_is_pressed"]
